<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/loginScreen"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-40dp"
        android:text="@string/login"
        android:textFontWeight="@android:integer/config_longAnimTime"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etRa"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/azul_claro"
        android:hint="@string/hint_ra"
        style="@style/loginInput"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        app:layout_constraintWidth_percent="0.6" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etSenha"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/azul_claro"
        android:hint="@string/hint_senha"
        android:inputType="textPassword"
        style="@style/loginInput"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRa"
        app:layout_constraintWidth_percent="0.6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEntrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/entrar"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSenha"
        app:layout_constraintWidth_percent="0.6" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCard"
        android:layout_width="fill_parent"
        android:layout_height="500dp"
        android:layout_marginStart="-90dp"
        android:layout_marginTop="-150dp"
        android:backgroundTint="@color/amarelo"
        app:cardCornerRadius="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>